# Argus

./: .gitignore
.github/workflows/: ci.yml
argus_brain/: pyproject.toml
argus_brain/src/: detector.py  main.py  memory_reader.py
argus_engine/: CMakeLists.txt  conanfile.py  imgui.ini
argus_engine/src/: SharedMemory.hpp  main.cpp
argus_engine/tests/: test_main.cpp
